@@ -8,19 +8,17 @@
  */
 package vazkii.botania.client.integration.jei.crafting;
 
-import com.google.common.collect.ImmutableList;
-
 import mezz.jei.api.constants.VanillaTypes;
 import mezz.jei.api.gui.builder.IRecipeLayoutBuilder;
 import mezz.jei.api.gui.ingredient.ICraftingGridHelper;
 import mezz.jei.api.recipe.IFocusGroup;
 import mezz.jei.api.recipe.category.extensions.vanilla.crafting.ICraftingCategoryExtension;
 
-import net.minecraft.resources.Identifier;
+import net.minecraft.world.item.crafting.RecipeHolder;
+import net.minecraft.world.item.crafting.display.SlotDisplay;
 import net.minecraft.world.item.ItemStack;
 
 import org.jetbrains.annotations.NotNull;
-import org.jetbrains.annotations.Nullable;
 
 import vazkii.botania.common.crafting.recipe.TerraShattererTippingRecipe;
 import vazkii.botania.common.item.BotaniaItems;
@@ -29,28 +27,22 @@ import vazkii.botania.common.item.equipment.tool.terrasteel.TerraShattererItem;
 import java.util.Collections;
 import java.util.List;
 
-public class TerraShattererTippingRecipeWrapper implements ICraftingCategoryExtension {
-	private final List<List<ItemStack>> inputs;
-	private final ItemStack output;
-	private final Identifier name;
+public class TerraShattererTippingRecipeWrapper implements ICraftingCategoryExtension<TerraShattererTippingRecipe> {
+	@Override
+	public List<SlotDisplay> getIngredients(@NotNull RecipeHolder<TerraShattererTippingRecipe> recipeHolder) {
+		return List.of(
+				new SlotDisplay.ItemSlotDisplay(BotaniaItems.terraPick),
+				new SlotDisplay.ItemSlotDisplay(BotaniaItems.elementiumPick)
+		);
+	}
 
-	public TerraShattererTippingRecipeWrapper(TerraShattererTippingRecipe recipe) {
-		inputs = ImmutableList.of(ImmutableList.of(new ItemStack(BotaniaItems.terraPick)), ImmutableList.of(new ItemStack(BotaniaItems.elementiumPick)));
-		output = new ItemStack(BotaniaItems.terraPick);
+	@Override
+	public void setRecipe(@NotNull RecipeHolder<TerraShattererTippingRecipe> recipeHolder, @NotNull IRecipeLayoutBuilder builder, @NotNull ICraftingGridHelper helper, @NotNull IFocusGroup focuses) {
+		var inputs = List.of(List.of(new ItemStack(BotaniaItems.terraPick)), List.of(new ItemStack(BotaniaItems.elementiumPick)));
+		var output = new ItemStack(BotaniaItems.terraPick);
 		TerraShattererItem.setTipped(output);
 
-		this.name = recipe.getId();
-	}
-
-	@Override
-	public void setRecipe(@NotNull IRecipeLayoutBuilder builder, @NotNull ICraftingGridHelper helper, @NotNull IFocusGroup focuses) {
 		helper.createAndSetInputs(builder, VanillaTypes.ITEM_STACK, inputs, 0, 0);
 		helper.createAndSetOutputs(builder, VanillaTypes.ITEM_STACK, Collections.singletonList(output));
-	}
-
-	@Nullable
-	@Override
-	public Identifier getRegistryName() {
-		return name;
 	}
 }
